--- a/public/500.html
+++ b/public/500.html
@@ -50,8 +50,8 @@
 <body>
   <!-- This file lives in public/500.html -->
   <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
+    <h1>Что-то пошло не так..</h1>
   </div>
-  <p>If you are the application owner check the logs for more information.</p>
+  <p>по вопросам: arsemchik@gmail.com</p>
 </body>
 </html>
